📝 (README.md): Update extension name from "Warpcast PFF Animator" to "Warpcast PFP Animator" for consistency 🚀 (README.md): Add download link to the latest release on Chrome Web Store for easy access 🚀 (README.md): Improve installation instructions for different browsers and clarify steps for enabling developer mode and loading the extension 📝 (README.md): Add section on creating an issue for problem reporting and feedback 📝 (README.md): Update acknowledgements section to include GitHub profile link for ggomaeng ✨ (background.js): Add background script to check if the extension is loaded properly
✨ (content.js): Add welcome message with ASCII art and extension information on page load
📝 (manifest.json): Update extension version to 1.0.3 and add browser specific settings for Gecko engine

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Warpcast PFP Animator",
-    "version": "1.0.1",
+    "version": "1.0.3",
     "description": "Automatically replace img src properties on warpcast.com to animate profile pictures.",
     "permissions": [],
     "host_permissions": ["https://warpcast.com/*"],
@@ -16,5 +16,11 @@
             "matches": ["https://warpcast.com/*"],
             "js": ["content.js"]
         }
-    ]
+    ],
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "warpcast-pfp-animator@example.com",
+            "strict_min_version": "91.0"
+        }
+    }
 }
